--- a/project/index.html
+++ b/project/index.html
@@ -106,11 +106,11 @@
                             <div id="text">
                                 <div class="item">
                                     Kid's name:
-                                    <input type="text" name="name" value="FirstName LastName">
+                                    <input type="text" name="name" placeholder="FirstName LastName">
                                 </div>
                                 <div class="item">
                                     Sensor's code:
-                                    <input type="text" name="code" value="Code">
+                                    <input type="text" name="code" placeholder="Code">
 
                                 </div>
                             </div>
@@ -118,8 +118,8 @@
                             <div class="item">
                                 Gender:
                                 <div id="gen">
-                                    <input type="radio" class="gender" value="Girl" name="kidgen">Girl
-                                    <input type="radio" class="gender" value="Boy" name="kidgen">Boy</div>
+                                    <input type="radio" class="gender" placeholder="Girl" name="kidgen">Girl
+                                    <input type="radio" class="gender" placeholder="Boy" name="kidgen">Boy</div>
                             </div>
                             <div id="addphoto">
                                 Add a photo with your child:
