--- a/project/index_kid.html
+++ b/project/index_kid.html
@@ -142,12 +142,12 @@
             <p class="modal__text">
               <form>
                 Firstname and Lastname
-                <input type="text" name="name" value="FirstName LastName">
+                <input type="text" name="name" placeholder="FirstName LastName">
                 <img src="images/descărcare(2).png" alt="location">
                 Latitude:
-                <input type="text" name="latitude" value="45.943161">
+                <input type="text" name="latitude" placeholder="45.943161">
                 Longitude:
-                <input type="text" name="longitudine" value="24.966761">
+                <input type="text" name="longitudine" placeholder="24.966761">
                 
   
               </form>
