--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -120,20 +120,20 @@
           <p class="modal__text">
             <form>
               <img src="images/descărcare(1).png" alt="user"><br>
-              <input type="text" name="name" value="FirstName LastName">
+              <input type="text" name="name" placeholder="FirstName LastName">
               <br>
               <img src="images/descărcare(2).png" alt="location">
               Latitude:
-              <input type="text" name="latitude" value="45.943161">
+              <input type="text" name="latitude" placeholder="45.943161">
               <br> Longitude:
-              <input type="text" name="longitudine" value="24.966761">
+              <input type="text" name="longitudine" placeholder="24.966761">
               <br>
               <img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg" alt="phone"><br>
-              <input type="text" name="phone" value="Phone Number">
+              <input type="text" name="phone" placeholder="Phone Number">
               <br>
               <img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"
                 alt="mail"><br>
-              <input type="text" name="e-mail" value="E-mail Adress">
+              <input type="text" name="e-mail" placeholder="E-mail Adress">
               <br>
 
             </form>
@@ -156,11 +156,11 @@
               <div id="text">
                 <div class="item">
                   Kid's name:
-                  <input type="text" name="name" value="FirstName LastName">
+                  <input type="text" name="name" placeholder="FirstName LastName">
                 </div>
                 <div class="item">
                   Sensor's code:
-                  <input type="text" name="code" value="Code">
+                  <input type="text" name="code" placeholder="Code">
 
                 </div>
               </div>
@@ -168,8 +168,8 @@
               <div class="item">
                 Gender:
                 <div id="gen">
-                  <input type="radio" class="gender" value="Girl" name="kidgen">Girl
-                  <input type="radio" class="gender" value="Boy" name="kidgen">Boy</div>
+                  <input type="radio" class="gender" placeholder="Girl" name="kidgen">Girl
+                  <input type="radio" class="gender" placeholder="Boy" name="kidgen">Boy</div>
               </div>
               <div id="addphoto">
                 Add a photo with your child:
