separate model and controller(sensor)

--- a/project/senzor.html
+++ b/project/senzor.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <form method="GET" action="senzor.php">
+        <form method="GET" action="senzorController.php">
             <p> Kid Sensor</p><br>
             <div id="kid_id">
                 <img src="images/index.png" alt="user">
