--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,35 @@
     <title>Kimo</title>
 </head>
 
+<style>
+    input{
+    border:none;
+    background: none;
+    text-align: center;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+    display: block; padding: 5% 5%;
+    margin-left: 25%;
+    outline: none;
+}
+
+
+input:hover{
+    color: #fff;
+}
+
+@media screen and (max-width: 760px){
+    input{
+        color:#fff;
+        margin-left:30%;
+    }
+}
+
+</style>
+
 <body>
 
     <nav>
@@ -26,7 +55,7 @@
                 </ul>
             </li>
             <li><a href="index_profile.html">My Account</a></li>
-            <li><a href="index_login.html">Log Out</a></li>
+            <li><form method="POST" action="logout.php"><input type="submit" name="logout" value="Log Out" ></form></li>
         </ul>
         <nav>
             <ul>
@@ -44,7 +73,7 @@
                             </ul>
                         </li>
                         <li><a href="index_profile.html">My Account</a></li>
-                        <li><a href="index_login.html">Log Out</a></li>
+                        <li><form method="POST" action="logout.php"><input type="submit" name="logout" value="Log Out" ></form></li>
                     </ul>
                 </li>
                 <li><img src="images/images.png" alt="logo"></li>
