tabela de relatie copii conturi

--- a/project/index.html
+++ b/project/index.html
@@ -55,7 +55,7 @@
     </nav>
     <main>
         <a href="index_kid.html">
-            <div><img src="images/picture145716079994.jpg" alt="kid"> kid name1 </div>
+            <div><img src="images/picture145716079994.jpg" alt="kid"><input type="submit" value ="kid name1">  </div>
         </a>
         <a href="index_kid.html">
             <div><img src="images/picture145716079994.jpg" alt="kid"> kid name2</div>
