manual de utilizare

--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -198,7 +198,8 @@
         <p> <b>Sensor Kid:</b>
             <p>Datele vor fi preluate dintr-un formular web si for fi transmise prin PUT la un REST API unde vor vi stocate intr-o bază de date locală.
                 Un client, în cazul de față aplicația "KIMO", va putea afla anumite date specifice senzorului (poziție, stare) apelând acest serviciu prin metoda GET.
-                De fiecare dată când un nou copil e adăugat în aplicație se trimite prin metoda POST o cerere de înregistrare a copilului în baza de 
+                De fiecare dată când un nou copil e adăugat în aplicație se trimite prin metoda POST
+                 o cerere de înregistrare a copilului în baza de 
                 date a senzorului având inițial locația părintelui și stare obișnuită.
             </p>
             <b>Google Map API:</b>
