--- a/Arhitecture/GhidUtilizatori.html
+++ b/Arhitecture/GhidUtilizatori.html
@@ -53,10 +53,10 @@
         <h4>4. Vizualizare pagină copil</h4>
         <p>
             Pagina unui copil cuprinde atat informatii referitoare la odrasla cat si optiunea de a-i adauga noi informatii la profil.
-            Pe acesta pagina sunt fizibile: numele, prenumele, fotografia copilului, locatia la care se afla in timp real pe o harta( primita de la senzor) dar si doua liste cu persoane:
+            Pe acesta pagina sunt vizibile: numele, prenumele, fotografia copilului, locatia la care se afla in timp real pe o harta( primita de la senzor) dar si doua liste cu persoane:
             una cu persoanele de interes ale copilului si cealalta cu alti copii din aplicatie cu care el a interactionat. Lista cu prieteni este automat updatata de aplicatie
             la fiecare noua interactiune. Lista cu persoane de interes cuprinde date despre oamenii cu care copilul este in siguranta( nume si locatie) si poate fi oricand extinsa de utilizator.
-            Tot de pe aceasta pagina putem schima si fotografia de profil a copilului.
+            Tot de pe aceasta pagina putem schimba si fotografia de profil a copilului.
         </p>
     </section>
     <section id="C5">
